style: Ajuste estilo textos bloco triplo

--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -37,19 +37,19 @@
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 500</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 500</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Anual:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 6.000</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 6.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Total em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 120.000</p>
+                            <p class="m-0 text-3xl font-extrabold text-amber-500">R$ 120.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 52.800</p>
+                            <p class="m-0 text-3xl font-extrabold text-azul">R$ 52.800</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
@@ -60,19 +60,19 @@
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 1.000</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 1.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Anual:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 12.000</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 12.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Total em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 240.000</p>
+                            <p class="m-0 text-3xl font-extrabold text-amber-500">R$ 240.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 105.600</p>
+                            <p class="m-0 text-3xl font-extrabold text-azul">R$ 105.600</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
@@ -83,19 +83,19 @@
                         <iconify-icon icon="lucide:dollar-sign" class="mx-auto text-5xl mb-8 text-verde"></iconify-icon>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Se o valor da sua conta é:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 5.000</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 5.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Anual:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 60.000</p>
+                            <p class="m-0 text-2xl font-extrabold text-neutral-600">R$ 60.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Conta Total em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 1.200.000</p>
+                            <p class="m-0 text-3xl font-extrabold text-amber-500">R$ 1.200.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0">
                             <p class="text-sm mb-1">Economia em 20 anos:</p>
-                            <p class="m-0 text-xl font-extrabold text-azul">R$ 528.000</p>
+                            <p class="m-0 text-3xl font-extrabold text-azul">R$ 528.000</p>
                         </span>
                         <span class="flex flex-col mb-6 last:mb-0 mt-8">
                             <p class="text-sm mb-2">Se sua economia for aplicada a<br><strong>12%</strong> ao ano, renderá:</p>
