--- a/src/lp/locacao.html
+++ b/src/lp/locacao.html
@@ -120,7 +120,7 @@
                                 <button type="submit" id="btn-ativar-simulador" class="btn bg-verde font-extrabold text-xl">Enviar</button>
                             </form>
                         </div>
-                        <div id="box-simulador" class=" mt-12">
+                        <div id="box-simulador" class="hidden mt-12">
                             <span class="mb-8 font-extrabold flex flex-col">
                                 <label for="">Insira o valor médio da sua conta mensal:</label>
                                 <p class="text-2xl mt-4 border-b border-verde w-1/3">
