style: Correção layout lista em 'Descubra como funciona'

--- a/src/index.html
+++ b/src/index.html
@@ -312,19 +312,19 @@
                             <h2 class="text-[#ffffff] font-extrabold">Descubra como funciona</h2>
                             <li class="text-[#ffffff] text-sm list-none flex items-center mb-4">
                                 <iconify-icon icon="lucide:sun" class="mr-4 text-4xl text-[#f2b603]"></iconify-icon>
-                                Avaliamos a possibilidade de instalação da estrutura, desenvolvemos o projeto e aprovamos com a concessionária.
+                                <p class="m-0 text-sm">Avaliamos a possibilidade de instalação da estrutura, desenvolvemos o projeto e aprovamos com a concessionária.</p>
                             </li>
                             <li class="text-[#ffffff] text-sm list-none flex items-center mb-4">
                                 <iconify-icon icon="lucide:sun" class="mr-4 text-4xl text-[#f2b603]"></iconify-icon>
-                                A <strong>Agro&Solar</strong> instala uma usina fotovoltaica dedicada ao seu condomínio.
+                                <p class="m-0 text-sm">A <strong>Agro&Solar</strong> instala uma usina fotovoltaica dedicada ao seu condomínio.</p>
                             </li>
                             <li class="text-[#ffffff] text-sm list-none flex items-center mb-4">
                                 <iconify-icon icon="lucide:sun" class="mr-4 text-4xl text-[#f2b603]"></iconify-icon>
-                                Você consome a energia gerada e reduz os custos na conta de luz em 20% nos primeiros 10 anos, 40% nos outros 10 e dai pra frente o equipamento é do condomínio, podendo chegar a uma economia de mais de 80%.
+                                <p class="m-0 text-sm">Você consome a energia gerada e reduz os custos na conta de luz em 20% nos primeiros 10 anos, 40% nos outros 10 e dai pra frente o equipamento é do condomínio, podendo chegar a uma economia de mais de 80%.</p>
                             </li>
                             <li class="text-[#ffffff] text-sm list-none flex items-center mb-4">
                                 <iconify-icon icon="lucide:sun" class="mr-4 text-4xl text-[#f2b603]"></iconify-icon>
-                                Sem investimento algum e com manutenção gratuita ao longo do contrato. Sem complicações técnicas.
+                                <p class="m-0 text-sm">Sem investimento algum e com manutenção gratuita ao longo do contrato. Sem complicações técnicas.</p>
                             </li>
                         </div>
                     </div>
