--- a/src/index.html
+++ b/src/index.html
@@ -451,6 +451,44 @@
                             </table>
                         </div>
                     </div>
+                    <div class="col-span-5 grid gap-8 grid-cols-4 mt-12">
+                        <span class="flex">
+                            <div>
+                                <iconify-icon icon="lucide:circle-dollar-sign" class="mr-4 text-4xl bg-verde text-white p-4 rounded-full aspect-square"></iconify-icon>
+                            </div>
+                            <div>
+                                <p class="font-black text-base">Economia para todos os moradores</p>
+                                <p class="text-xs">Redução real na conta de luz do condomínio, mês a mês, com energia limpa e mais acessível.</p>
+                            </div>
+                        </span>
+                        <span class="flex">
+                            <div>
+                                <iconify-icon icon="lucide:phone-call" class="mr-4 text-4xl bg-verde text-white p-4 rounded-full aspect-square"></iconify-icon>
+                            </div>
+                            <div>
+                                <p class="font-black text-base">Atendimento especializado </p>
+                                <p class="text-xs">Soluções sob medida para as necessidades do seu condomínio.</p>
+                            </div>
+                        </span>
+                        <span class="flex">
+                            <div>
+                                <iconify-icon icon="lucide:monitor-check" class="mr-4 text-4xl bg-verde text-white p-4 rounded-full aspect-square"></iconify-icon>
+                            </div>
+                            <div>
+                                <p class="font-black text-base">Tecnologia de ponta</p>
+                                <p class="text-xs">Equipamentos de alta performance que garantem eficiência, inovação e confiabilidade.</p>
+                            </div>
+                        </span>
+                        <span class="flex">
+                            <div>
+                                <iconify-icon icon="lucide:house-plus" class="mr-4 text-4xl bg-verde text-white p-4 rounded-full aspect-square"></iconify-icon>
+                            </div>
+                            <div>
+                                <p class="font-black text-base">Imóveis valorizados desde o primeiro dia</p>
+                                <p class="text-xs">Infraestrutura moderna e sustentável que agrega valor ao seu patrimônio.</p>
+                            </div>
+                        </span>
+                    </div>
                 </container>
             </section>
             <section class="sessao">
